// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationDialog should render dialog (group, cancel all) 1`] = `
<ConfirmDialog
  actionButton="submit"
  autofocusButton={true}
  cancelButtonText="confirmation dialog cancel all button text"
  closeButtonAriaLabel="Закрыть"
  cls={
    BemNamingEntity {
      "entity": Object {
        "block": "client-confirmation-dialog",
      },
      "entityMixes": Array [
        "js-prevent-deselect",
      ],
      "entityMods": Object {
        "no-title": false,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
  extraButtonText="confirmation dialog submit all button text"
  onCancel={[Function]}
  onClose={[Function]}
  onExtraButtonClick={[Function]}
  onSubmit={[Function]}
  submitButtonText="confirmation dialog submit button text"
  theme="normal"
  visible={false}
>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "client-confirmation-dialog",
          "elem": "title",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    confirmation dialog title
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "client-confirmation-dialog",
          "elem": "content",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    confirmation dialog text
  </div>
</ConfirmDialog>
`;

exports[`ConfirmationDialog should render dialog (single) 1`] = `
<ConfirmDialog
  actionButton="submit"
  autofocusButton={true}
  cancelButtonText="confirmation dialog cancel button text"
  closeButtonAriaLabel="Закрыть"
  cls={
    BemNamingEntity {
      "entity": Object {
        "block": "client-confirmation-dialog",
      },
      "entityMixes": Array [
        "js-prevent-deselect",
      ],
      "entityMods": Object {
        "no-title": false,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
  extraButtonText=""
  onCancel={[Function]}
  onClose={[Function]}
  onExtraButtonClick={[Function]}
  onSubmit={[Function]}
  submitButtonText="confirmation dialog submit button text"
  theme="normal"
  visible={false}
>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "client-confirmation-dialog",
          "elem": "title",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    confirmation dialog title
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "client-confirmation-dialog",
          "elem": "content",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    confirmation dialog text
  </div>
</ConfirmDialog>
`;
